Scrollbar fixed

--- a/submissions/BlueLamantine/html-css-popup/style.css
+++ b/submissions/BlueLamantine/html-css-popup/style.css
@@ -73,6 +73,7 @@ a:focus,
   display: grid;
   height: 480px;
   overflow-y: scroll;
+  overflow-x: hidden;
 }
 .popup-item {
   display: grid;
